Updated to plural form user -> users wallet -> wallets
